[knx] add support for RGBW and xyY DPTs (#208)
* add support for RGBW and xyY DPTs
* refactor core type mapper to separate classes
* documentation
* add support for vendor-specific RGB/HSV DPT

Signed-off-by: Jan N. Klug <jan.n.klug@rub.de>