@@ -13,14 +13,17 @@
  */
 package org.smarthomej.binding.knx.internal;
 
-import static java.util.stream.Collectors.toSet;
-
-import java.util.Collections;
+import java.io.IOException;
+import java.io.InputStream;
+import java.util.Map;
+import java.util.Properties;
 import java.util.Set;
-import java.util.stream.Stream;
+import java.util.stream.Collectors;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.openhab.core.thing.ThingTypeUID;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
 /**
  * The {@link KNXBindingConstants} class defines common constants, which are
@@ -30,6 +33,7 @@ import org.openhab.core.thing.ThingTypeUID;
  */
 @NonNullByDefault
 public class KNXBindingConstants {
+    private static final Logger LOGGER = LoggerFactory.getLogger(KNXBindingConstants.class);
 
     public static final String BINDING_ID = "knx";
 
@@ -77,7 +81,8 @@ public class KNXBindingConstants {
     public static final String CHANNEL_SWITCH = "switch";
     public static final String CHANNEL_SWITCH_CONTROL = "switch-control";
 
-    public static final Set<String> CONTROL_CHANNEL_TYPES = Collections.unmodifiableSet(Stream.of(CHANNEL_COLOR_CONTROL, //
+    public static final Set<String> CONTROL_CHANNEL_TYPES = Set.of( //
+            CHANNEL_COLOR_CONTROL, //
             CHANNEL_CONTACT_CONTROL, //
             CHANNEL_DATETIME_CONTROL, //
             CHANNEL_DIMMER_CONTROL, //
@@ -85,7 +90,7 @@ public class KNXBindingConstants {
             CHANNEL_ROLLERSHUTTER_CONTROL, //
             CHANNEL_STRING_CONTROL, //
             CHANNEL_SWITCH_CONTROL //
-    ).collect(toSet()));
+    );
 
     public static final String CHANNEL_RESET = "reset";
 
@@ -98,4 +103,27 @@ public class KNXBindingConstants {
     public static final String STOP_MOVE_GA = "stopMove";
     public static final String SWITCH_GA = "switch";
     public static final String UP_DOWN_GA = "upDown";
+
+    public static final Map<Integer, String> MANUFACTURER_MAP = readPropertiesFile("manufacturer.properties").entrySet()
+            .stream().collect(Collectors.toMap(e -> Integer.parseInt(e.getKey()), Map.Entry::getValue));
+    public static final Map<Integer, String> FIRMWARE_MAP = readPropertiesFile("firmware.properties").entrySet()
+            .stream().collect(Collectors.toMap(e -> Integer.parseInt(e.getKey()), Map.Entry::getValue));
+
+    public static Map<String, String> readPropertiesFile(String filename) {
+        InputStream resource = Thread.currentThread().getContextClassLoader().getResourceAsStream(filename);
+        if (resource == null) {
+            LOGGER.warn("Could not read resource file '{}', binding will probably fail: resource is null", filename);
+            return Map.of();
+        }
+
+        try {
+            Properties properties = new Properties();
+            properties.load(resource);
+            return properties.entrySet().stream()
+                    .collect(Collectors.toMap(e -> (String) e.getKey(), e -> (String) e.getValue()));
+        } catch (IOException e) {
+            LOGGER.warn("Could not read resource file '{}', binding will probably fail: {}", filename, e.getMessage());
+            return Map.of();
+        }
+    }
 }
